# MOE_Matmul

./: .gitignore  README.md  pyproject.toml
results/: moe_matmul_stats.md
src/moe_matmul_stats/: __init__.py  cli.py  report.py  schema.py  sources.py  verification.py
src/moe_matmul_stats/extractors/: __init__.py  _records.py  _summary.py  deepseek_v3.py  nano_jax.py  olmoe.py
tests/: test_extractors.py  test_report.py  test_sources.py  test_verification.py
verify/: README.md  ai_filled_metrics_sheet.tsv  generate_verified_metrics.py  verified_metrics.csv  verified_metrics.md  verified_results.md
